# Slicer-Reg2D3D

./: CMakeLists.txt
Reg2D3D/: CMakeLists.txt  DrrRenderer.cxx  DrrRenderer.h  DrrRendererRayCastingGpuCUDA (Kopie).cuh  DrrRendererRayCastingGpuCUDA.cuh  DrrRendererRayCastingGpuCUDAThreadWorker (Kopie).h  DrrRendererRayCastingGpuCUDAThreadWorker.cxx  DrrRendererRayCastingGpuCUDA_kernel (Kopie).cu  DrrRendererRayCastingGpuCUDA_kernel.cu  Geometry.h  ImageComparerMutualInformation.cpp~  ImageComparerMutualInformation.cxx  ImageComparerMutualInformation.h  ImageComparerMutualInformation.h~  Matrices.cxx  Matrices.h  helloworld  helloworld.cu  helloworld.cxx  helloworld.h  qSlicerReg2D3DModule.cxx  qSlicerReg2D3DModule.h  qSlicerReg2D3DModuleWidget.cxx  qSlicerReg2D3DModuleWidget.h
Reg2D3D/Logic/: CMakeLists.txt  DrrRendererRayCastingGpuCUDAThreadWorker.cxx~  DrrRendererRayCastingGpuCUDA_kernel.cu~  vtkSlicerReg2D3DLogic.cxx  vtkSlicerReg2D3DLogic.h
Reg2D3D/MRML/: vtkMRMLCropVolumeParametersNode.cxx~  vtkMRMLReg2D3DParametersNode.cxx  vtkMRMLReg2D3DParametersNode.cxx~  vtkMRMLReg2D3DParametersNode.h  vtkMRMLReg2D3DParametersNode.h~
Reg2D3D/Resources/: qSlicerReg2D3DModule.qrc
Reg2D3D/Resources/UI/: qSlicerReg2D3DFooBarWidget.ui  qSlicerReg2D3DModuleWidget.ui
Reg2D3D/Widgets/: qSlicerReg2D3DFooBarWidget.cxx  qSlicerReg2D3DFooBarWidget.h
